# LiteGameServer

./: .gitignore  README.md
GameServer/: build_linux.sh  build_mac.sh  build_xcode.sh
GameServer/GameServer/: Buffer.cpp  CMakeLists.txt  DBQueryHandler.cpp  DBQueryHandler.hpp  EventLogs.cpp  EventLogs.hpp  GameLoop.cpp  GameLoop.hpp  GameNetHelper.cpp  GameNetHelper.hpp  MsgQueue.cpp  MsgQueue.hpp  NetworkMgr.cpp  NetworkMgr.hpp  TcpSocket.cpp  TcpSocket.hpp  TimeService_test.cpp  main.cpp
GameServer/GameServer.xcodeproj/: project.pbxproj
GameServer/GameServer.xcodeproj/xcshareddata/xcschemes/: GameServer.xcscheme
GameServer/GameServer/DB/: DBMgr.cpp  DBMgr.hpp
GameServer/GameServer/DataReader/: INIReader.cpp  INIReader.hpp
GameServer/GameServer/Game/: Event.cpp  Event.hpp  IMsgRouter.hpp  SessionMgr.cpp  SessionMgr.hpp
GameServer/GameServer/Game/DataMgr/: DataDefine.cpp  DataDefine.hpp  DataMgr.cpp  DataMgr.hpp
GameServer/GameServer/Network/: INetworkMgr.cpp  INetworkMgr.hpp  NetSlot.cpp  NetSlot.hpp  NetworkMgr.cpp  NetworkMgr.hpp  NetworkMgrEpoll.cpp  NetworkMgrEpoll.hpp  NetworkMgrKQueue.cpp  NetworkMgrKQueue.hpp  NetworkMgrSelect.cpp  NetworkMgrSelect.hpp  TcpSocket.cpp  TcpSocket.hpp
GameServer/GameServer/Player/: Player.cpp  Player.hpp  PlayerMgr.cpp  PlayerMgr.hpp
GameServer/GameServer/Utils/: Buffer.cpp  Buffer.hpp  Buffer_test.cpp  IDGenerator.cpp  IDGenerator.hpp  LoggerHelper.cpp  LoggerHelper.hpp  MsgQueue.hpp  TimeService.cpp  TimeService.hpp
GameServer/GameServer/cmake/: SetupMysqlCpp.cmake  SetupProtobuf.cmake  SetupSqdlog.cmake
GameServer/GameServer/proto/: buildproto.sh  dbmsg.pb.cc  dbmsg.pb.h  dbmsg.proto  msg.pb.cc  msg.pb.h  msg.proto
GameServer/GameServer/tests/: CMakeLists.txt
GameServer/GameServer/tests/Utils/: IDGenerator_test.cpp  MsgQueue_test.cpp
GameServer/doc/: progress.md  system_desgin.md
GameServer/script/: convertCSV.py  createrole.sql  db.sql  insertAccounts.py
GameServer/thirdlibs/mac/mysql-connector-c++/: INFO_BIN
GameServer/thirdlibs/mac/mysql-connector-c++/lib64/: libcrypto.3.dylib  libmysqlcppconn.10.dylib  libmysqlcppconnx.2.dylib  libssl.3.dylib
